Improvements for the paper

--- a/paper/atmociad.bib
+++ b/paper/atmociad.bib
@@ -30,6 +30,13 @@
   pages={879--884},
   year={1971}
 }
+
+@book{Singhal2009,
+	title = {Elements of {Space} {Physics}},
+	publisher = {PHI Learning Pvt. Ltd.},
+	author = {Singhal, RP},
+	year = {2009},
+}
 @ARTICLE{Wu1979,
        author = {{Wu}, C.~Y.~R. and {Judge}, D.~L.},
         title = "{The atomic oxygen 1304 {\r{A}} emission produced through photodissociation of CO and CO$_{2}$.}",
@@ -68,7 +75,7 @@
 }
 
 
-@ARTICLE{Fremont2006,
+@article{Fremont2006,
        author = {{Fr{\'e}mont}, F. and {Hajaji}, A. and {Chesnel}, J. -Y.},
         title = "{K -shell and total ionization cross sections following electron-molecule collisions: An empirical scaling law}",
       journal = {\pra},
@@ -84,7 +91,63 @@
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@article{Davies1989,
+	title = {Measurements of swarm parameters and derived electron collision cross sections in methane},
+	volume = {65},
+	issn = {00218979},
+	url = {http://link.aip.org/link/JAPIAU/v65/i9/p3311/s1&Agg=doi},
+	doi = {10.1063/1.342642},
+	number = {9},
+	urldate = {2011-05-09},
+	journal = {Journal of Applied Physics},
+	author = {Davies, D. K. and Kline, L. E. and Bies, W. E.},
+	year = {1989},
+	pages = {3311},
+}
+@article{Erwin2005,
+	title = {Electron-impact dissociation of the methane molecule into neutral fragments},
+	volume = {72},
+	url = {http://link.aps.org/doi/10.1103/PhysRevA.72.052719},
+	doi = {10.1103/PhysRevA.72.052719},
+	abstract = {The three most important electron-impact processes dissociating CH4 molecule into neutral fragments are e+CH4→CH3+⋯, e+CH4→CH2+⋯, and e+CH4→CH+⋯. Neither experimental nor theoretical cross sections for the processes in a broad range of energy are available, except for the first process for which reliable measured cross sections for energies up to 500eV are available. Only two measured values (at a single impact energy) of the cross section for the second process are available, and only two measured values (also at a single energy) of the cross section for the third process are available in the literature. Therefore, we derive in this work analytical dissociation cross sections for the second and the third processes mentioned above in the energy range up to 500eV. At higher (but still nonrelativistic) energies, we calculate the parameters of the Bethe-Born cross section for the second and the third processes.},
+	number = {5},
+	urldate = {2014-03-17},
+	journal = {Physical Review A},
+	author = {Erwin, Daniel A. and Kunc, Joseph A.},
+	month = nov,
+	year = {2005},
+	pages = {052719},
+}
 
+
+@article{Bizau1995,
+title = {Redetermination of absolute partial photoionization cross sections of He and Ne atoms between 20 and 300 eV photon energy},
+journal = {Journal of Electron Spectroscopy and Related Phenomena},
+volume = {71},
+number = {3},
+pages = {205-224},
+year = {1995},
+issn = {0368-2048},
+doi = {https://doi.org/10.1016/0368-2048(94)02268-2},
+url = {https://www.sciencedirect.com/science/article/pii/0368204894022682},
+author = {J.M. Bizau and F.J. Wuilleumier},
+keywords = {Absolute partial photoionization cross section, Helium, Neon, PES},
+abstract = {Using photoelectron spectroscopy, we have measured some relative partial photoionization cross sections in He and Ne atoms. By compiling these results, along with previously published data obtained from photoabsorption, photoion and photoelectron spectroscopies, we have determined accurate absolute partial photoionization cross sections, up to 300 eV photon energy. The absolute scale was obtained by normalization to the photoabsorption cross sections. The best recommended values, determined by this self-consistent experimental procedure, are compared with the results of various theoretical determinations of the photoionization cross sections.}
+}
+@article{Samson1994,
+	title = {Total photoabsorption cross sections of {H2} from 18 to 113 {eV}},
+	volume = {11},
+	url = {http://josab.osa.org/abstract.cfm?URI=josab-11-2-277},
+	doi = {10.1364/JOSAB.11.000277},
+	abstract = {The total photoabsorption cross section of H2 has been measured between 18 and 113 eV with an accuracy of ±2 to ±3\%. The published data at higher energies are reviewed, and recommended cross sections are tabulated from 18 to 300 eV.},
+	number = {2},
+	urldate = {2011-05-06},
+	journal = {Journal of the Optical Society of America B},
+	author = {Samson, James A. R. and Haddad, G. N.},
+	month = feb,
+	year = {1994},
+	pages = {277--279},
+}
 @misc{Straub2004,
 	title = {Atomic and {Molecular} {Collisions} {Group}},
 	url = {http://www.ruf.rice.edu/~atmol/index.html},
@@ -754,6 +817,21 @@
 	doi = {10.1029/2006GL027488},
 	tags = "Titan"
 }
+
+@ARTICLE{Gentieu1973,
+       author = {{Gentieu}, E.~P. and {Mentall}, J.~E.},
+        title = "{Cross sections for production of the CO(A $^{1}${\ensuremath{\Pi}}-X $^{1}${\ensuremath{\Sigma}}) Fourth Positive band system and O($^{3}$S) by photodissociation of CO$_{2}$}",
+      journal = {\jcp},
+         year = 1973,
+        month = jun,
+       volume = {58},
+       number = {11},
+        pages = {4803-4815},
+          doi = {10.1063/1.1679063},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1973JChPh..58.4803G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @article{Gentieu1972,
 	File = {gentieu72.pdf:/home/gg/BIBLIO/BIB_CHIMIE/EMISSION/gentieu72.pdf:PDF},
@@ -4699,7 +4777,7 @@ year = {1993}
 	Doi = {10.1063/1.448706},
 	Month = {may},
 	author = {Derai, R. and Kemper, P. R. and Bowers, M. T.},
-	title = {{Effect of reactant ion internal and translational energy on the rate constants of the charge exchange reactions: $CO_2^+ +O_2 –\gt O_2^+ +CO_2$ and $O_2^+ +O_2 –\gt O_2+O_2^+ }},
+	title = {{Effect of reactant ion internal and translational energy on the rate constants of the charge exchange reactions: $CO_2^+ +O_2 –\gt O_2^+ +CO_2$ and $O_2^+ +O_2 –\gt O_2+O_2^+$ }},
 	journal = {\jcp},
 	volume = {82},
 	pages = {4517-4523},
@@ -4775,6 +4853,18 @@ year = {1993}
 	tags = "Soleil"
 }
 
+@article{Lummerzheim1994,
+	Issn = {0992-7689},
+	Url = {http://www.ann-geophys.net/12/1039/1994/},
+	author = {Lummerzheim, D. and Lilensten, J.},
+	title = {{Electron transport and energy degradation in the ionosphere: evaluation of the numerical solution, comparison with laboratory experiments and auroral observations}},
+	journal = {Annales Geophysicae},
+	volume = {12},
+	number = {10/11},
+	pages = {1039-1051},
+	year = {1994},
+	tags = "Electrons, Terre, Airglow, Article Venus Emit, Article_Titan_electrons"
+}
 @article{Lilensten1994,
 	Issn = {0992-7689},
 	Url = {http://www.ann-geophys.net/12/1039/1994/},
@@ -5186,7 +5276,7 @@ year = {1993}
 @article{Masuoka1980,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/1980JCPPC......623M},
-	author = {Masuoka, T. and Samson, J. A. R.},
+	author = {Masuoka, T. miscSamson, J. A. R.},
 	title = {{Dissociative and double photoionization of $CO_2$ from threshold to 90 \AA}},
 	journal = {Journal de Chimie Physique et de Physico-Chimie Biologique},
 	pages = {623},
@@ -8299,6 +8389,55 @@ ions doublement chargés et transport cinétique des protons}},
 	doi = {10.1051/0004-6361/200912125},
 	tags = "Titan, Moi, Rayons cosmiques, Electrons, EUV"
 }
+@article{Gronoff2012,
+	title = {Computing uncertainties in ionosphere-airglow models: {II}. {The} {Martian} airglow},
+	volume = {117},
+	shorttitle = {Computing uncertainties in ionosphere-airglow models},
+	url = {http://www.agu.org/pubs/crossref/2012/2011JA017308.shtml},
+	doi = {201210.1029/2011JA017308},
+	urldate = {2012-05-07},
+	journal = {Journal of Geophysical Research},
+	author = {Gronoff, Guillaume and Wedlund, Cyril Simon and Mertens, Christopher J. and Barthélemy, Mathieu and Lillis, Robert J. and Witasse, Olivier},
+	month = may,
+	year = {2012},
+	pages = {17 PP.},
+}
+
+@article{Gronoff2012b,
+	title = {Computing uncertainties in ionosphere-airglow models:{I}. {Electron} ﬂux and species production uncertainties for {Mars}},
+	volume = {117},
+	shorttitle = {Computing uncertainties in ionosphere-airglow models},
+	url = {http://www.agu.org/journals/ja/ja1204/2011JA016930/},
+	doi = {201210.1029/2011JA016930},
+	abstract = {Figure 12. Production of CO2+, and other major Martian ions by photon and electron impact. In the left panel, only the electron impact cross sections were perturbed. In the right panel, only the photoionizations (and photoabsorptions) cross sections were perturbed.},
+	urldate = {2012-04-05},
+	journal = {Journal of Geophysical Research},
+	author = {Gronoff, Guillaume and Wedlund, Cyril Simon and Mertens, Christopher J. and Lillis, Robert J.},
+	month = apr,
+	year = {2012},
+	keywords = {Mars, cross sections, electron transport, ionization, photoionization, uncertainties},
+	pages = {18 PP.},
+}
+
+
+@article{SimonWedlund2011,
+	title = {Comprehensive calculation of the energy per ion pair or {\textless}{I}{\textgreater}{W}{\textless}/{I}{\textgreater} values for five major planetary upper atmospheres},
+	volume = {29},
+	issn = {0992-7689},
+	url = {https://angeo.copernicus.org/articles/29/187/2011/},
+	doi = {10.5194/angeo-29-187-2011},
+	abstract = {The mean energy W expended in a collision of electrons with atmospheric gases is a useful parameter for fast aeronomy computations. Computing this parameter in transport kinetic models with experimental values can tell us more about the number of processes that have to be taken into account and the uncertainties of the models. We present here computations for several atmospheric gases of planetological interest (CO2, CO, N2, O2, O, CH4, H, He) using a family of multi-stream kinetic transport codes. Results for complete atmospheres for Venus, Earth, Mars, Jupiter and Titan are also shown for the first time. A simple method is derived to calculate W of gas mixtures from single-component gases and is conclusively checked against the W values of these planetary atmospheres. Discrepancies between experimental and theoretical values show where improvements can be made in the measurement of excitation and dissociation cross-sections of specific neutral species, such as CO2 and CO.},
+	language = {English},
+	number = {1},
+	urldate = {2023-10-20},
+	journal = {Annales Geophysicae},
+	author = {Simon Wedlund, C. and Gronoff, G. and Lilensten, J. and Ménager, H. and Barthélemy, M.},
+	month = jan,
+	year = {2011},
+	note = {Publisher: Copernicus GmbH},
+	pages = {187--195},
+}
+
 
 @article{Gronoff2009c,
 	page = {955-964},
@@ -8724,6 +8863,68 @@ ions doublement chargés et transport cinétique des protons}},
 	year = {2006},
 	doi = {10.1088/0953-4075/39/17/021},
 	tags = "K-SHELL, CrossSection, CO-CO2"
+}
+@article{Gronoff2020,
+	title = {Atmospheric {Escape} {Processes} and {Planetary} {Atmospheric} {Evolution}},
+	volume = {125},
+	copyright = {©2020. American Geophysical Union. All Rights Reserved.},
+	issn = {2169-9402},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1029/2019JA027639},
+	doi = {10.1029/2019JA027639},
+	abstract = {The habitability of the surface of any planet is determined by a complex evolution of its interior, surface, and atmosphere. The electromagnetic and particle radiation of stars drive thermal, chemical, and physical alteration of planetary atmospheres, including escape. Many known extrasolar planets experience vastly different stellar environments than those in our solar system: It is crucial to understand the broad range of processes that lead to atmospheric escape and evolution under a wide range of conditions if we are to assess the habitability of worlds around other stars. One problem encountered between the planetary and the astrophysics communities is a lack of common language for describing escape processes. Each community has customary approximations that may be questioned by the other, such as the hypothesis of H-dominated thermosphere for astrophysicists or the Sun-like nature of the stars for planetary scientists. Since exoplanets are becoming one of the main targets for the detection of life, a common set of definitions and hypotheses are required. We review the different escape mechanisms proposed for the evolution of planetary and exoplanetary atmospheres. We propose a common definition for the different escape mechanisms, and we show the important parameters to take into account when evaluating the escape at a planet in time. We show that the paradigm of the magnetic field as an atmospheric shield should be changed and that recent work on the history of Xenon in Earth's atmosphere gives an elegant explanation to its enrichment in heavier isotopes: the so-called Xenon paradox.},
+	language = {en},
+	number = {8},
+	urldate = {2023-10-20},
+	journal = {Journal of Geophysical Research: Space Physics},
+	author = {Gronoff, G. and Arras, P. and Baraka, S. and Bell, J. M. and Cessateur, G. and Cohen, O. and Curry, S. M. and Drake, J. J. and Elrod, M. and Erwin, J. and Garcia-Sage, K. and Garraffo, C. and Glocer, A. and Heavens, N. G. and Lovato, K. and Maggiolo, R. and Parkinson, C. D. and Simon Wedlund, C. and Weimer, D. R. and Moore, W. B.},
+	year = {2020},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1029/2019JA027639},
+	pages = {e2019JA027639},
+}
+@article{Nickel1992,
+	title = {Total cross section measurements for electron scattering on {H2} and {N2} from 4 to 300 {eV}},
+	volume = {25},
+	issn = {0953-4075},
+	url = {https://ui.adsabs.harvard.edu/abs/1992JPhB...25.2427N},
+	doi = {10.1088/0953-4075/25/10/020},
+	urldate = {2024-09-12},
+	journal = {Journal of Physics B Atomic Molecular Physics},
+	author = {Nickel, J. C. and Kanik, I. and Trajmar, S. and Imre, K.},
+	month = may,
+	year = {1992},
+	note = {Publisher: IOP
+ADS Bibcode: 1992JPhB...25.2427N},
+	pages = {2427--2431},
+}
+
+@article{Yoon2008,
+	title = {Cross {Sections} for {Electron} {Collisions} with {Hydrogen} {Molecules}},
+	volume = {37},
+	url = {http://adsabs.harvard.edu/abs/2008JPCRD..37..913Y},
+	abstract = {Cross section data have been compiled for electron collisions with
+hydrogen molecules based on 71 references. Cross sections are collected
+and reviewed for total scattering, elastic scattering, momentum
+transfer, excitations of rotational, vibrational, and electronic states,
+dissociation, ionization, emission of radiation, and dissociative
+attachment. For each process, the recommended values of the cross
+section are presented for use. The literature has been surveyed through
+the end of 2006.},
+	urldate = {2011-01-13},
+	journal = {Journal of Physical and Chemical Reference Data},
+	author = {Yoon, Jung-Sik and Song, Mi-Young and Han, Jeong-Min and Hwang, Sung Ha and Chang, Won-Seok and Lee, Bongju and Itikawa, Yukikazu},
+	month = jun,
+	year = {2008},
+	keywords = {Dissociation and dissociative attachment by electron impact, Elastic scattering of electrons by atoms and molecules, Molecular excitation and ionization by electron impact},
+	pages = {913--931},
+}
+
+@techreport{phelps1972,
+	title = {Collision cross sections for electrons with atmospheric species.},
+	url = {https://www.osti.gov/biblio/4528832},
+	urldate = {2024-09-12},
+	institution = {Joint Inst. for Lab. Astrophysics, Boulder, CO},
+	author = {Phelps, A. V.},
+	year = {1972},
 }
 
 @article{Menager2010,
