--- a/paper/atmociad.tex
+++ b/paper/atmociad.tex
@@ -23,7 +23,7 @@
 \author{Guillaume Gronoff \\ Cyril Simon\\ Jean Lilensten}
 
 \title{The \textbf{AtMoCiad} database}
-\graphicspath{{images/}{../electron/resultat/}{../photon/resultat/}}
+\graphicspath{{images/}{../electron/resultat/}{../photon/resultat/}{../proton/resultat/}{../hydrogen/resultat/}}
 
 \begin{document}
 \maketitle
@@ -40,6 +40,7 @@
 
 \include{Photons}
 \include{Electrons}
+\include{proton}
 
 %\include{part1_photo/Photons}
 
