--- a/paper/atmociad.bib
+++ b/paper/atmociad.bib
@@ -53,27 +53,6 @@
 
 
 
-@article{Witasse2002,
-  title={Prediction of a CO22+ layer in the atmosphere of Mars},
-  author={Witasse, O and Dutuit, O and Lilensten, J and Thissen, R and Zabka, J and Alcaraz, C and Blelly, P-L and Bougher, SW and Engel, S and Andersen, LH and others},
-  journal={Geophysical research letters},
-  volume={29},
-  number={8},
-  pages={104--1},
-  year={2002},
-  publisher={Wiley Online Library}
-}
-@article{Masuoka1993,
-  title={Single-, double-, and triple-photoionization cross sections of carbon monoxide (CO) and ionic fragmentation of CO+, CO 2+, and CO 3+},
-  author={Masuoka, Toshio and Nakamura, Eiken},
-  journal={Physical Review A},
-  volume={48},
-  number={6},
-  pages={4379},
-  year={1993},
-  publisher={APS}
-}
-
 
 @article{Fremont2006,
        author = {{Fr{\'e}mont}, F. and {Hajaji}, A. and {Chesnel}, J. -Y.},
@@ -153,6 +132,7 @@ abstract = {Using photoelectron spectroscopy, we have measured some relative par
 	url = {http://www.ruf.rice.edu/~atmol/index.html},
 	urldate = {2023-10-31},
 	author = {Atomic {and} Molecular collision group},
+	year = {2004}
 }
 @article{Glass2005,
   title={Dissociation dynamics of doubly excited states of molecular hydrogen},
@@ -1851,7 +1831,6 @@ abstract = {Using photoelectron spectroscopy, we have measured some relative par
 @article{Itikawa2002,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2002JPCRD..31..749I},
-	Doi = {10.1063/1.1481879},
 	Month = {sep},
 	author = {Itikawa, Y.},
 	title = {{Cross Sections for Electron Collisions With Carbon Dioxide}},
@@ -8946,16 +8925,6 @@ the end of 2006.},
   pages={169--187},
   year={2013},
   publisher={Elsevier}
-}
-@article{Gentieu1973,
-  title={Cross sections for production of the CO (A 1 $\Pi$- X 1 $\Sigma$) Fourth Positive band system and O (3 S) by photodissociation of CO2},
-  author={Gentieu, EP and Mentall, JE},
-  journal={The Journal of Chemical Physics},
-  volume={58},
-  number={11},
-  pages={4803--4815},
-  year={1973},
-  publisher={American Institute of Physics}
 }
 
 
