We correct the photoionization citations

--- a/paper/atmociad.bib
+++ b/paper/atmociad.bib
@@ -2597,6 +2597,20 @@ abstract = {Using photoelectron spectroscopy, we have measured some relative par
 	tags = "Chimie, Dication"
 }
 
+@article{Samson1990b,
+	       author = {{Samson}, James A.~R.},
+        title = "{Proportionality of electron-impact ionization to double photoionization}",
+      journal = {\prl},
+     keywords = {32.80.Fb, 34.80.Kw, Photoionization of atoms and ions, Electron-ion scattering, excitation and ionization},
+         year = 1990,
+        month = dec,
+       volume = {65},
+       number = {23},
+        pages = {2861-2864},
+          doi = {10.1103/PhysRevLett.65.2861},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1990PhRvL..65.2861S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 @article{Masuoka1993b,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/1993PhRvA..48.1955M},
